--- a/index.html
+++ b/index.html
@@ -3,11 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VisiDigital</title>
     <link rel="stylesheet" href="dist/CSS/style.css">
-</head>
-<body>
+    <link rel="shortcut icon" type="" href="assets/icon/ChatGPT Image Nov 19, 2025, 10_00_30 AM.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-    <script src="dist/JS/script.js"></script>
+</head>
+<body >
+ <!-- nav  -->
+<nav class="navbar navbar-expand-lg py-3 fixed-top navbar-dark " >
+
+  <div class="container">
+
+    <!-- KIRI: Logo / Nama -->
+    <a class="navbar-brand fw-bold " href="#">
+      VisiDigital
+    </a>
+
+    <!-- Toggler Menu Mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse fs-5" id="navbarContent">
+
+      <!-- TENGAH: Menu -->
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0 ">
+        <li class="nav-item">
+          <a class="nav-link active " href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Service</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+
+      <!-- KANAN: Ikon Sosial Media -->
+      <div class="d-flex gap-3">
+        
+      </div>
+    </div>
+  </div>
+</nav>
+<!-- nav -->
+ <!-- hero -->
+<section class="py-5 d-flex align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.801)), url(../assets/IMG/hero.png); min-height: 100vh; width: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; color: white;">
+ <div class="container py-5" id="hero">
+  <div class="row align-items-center ">
+
+    <!-- Kolom Teks -->
+    <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 " id="texthero">
+      <h1 class="fw-bold mb-3" style="font-size: 48px">Membantu Bisnis Anda Melakukan Lompatan Digital dengan Keyakinan</h1>
+      <p class="mb-4" style="font-size: 18px">Memberikan arah yang jelas bagi bisnis Anda melalui strategi digital yang dirancang dengan presisi dan didukung analisis yang mendalam.</p>
+      <a href="#" class="btn btn-primary px-4 py-2 fs-3">Mulai Sekarang</a>
+    </div>
+
+    <!-- Kolom Gambar -->
+    <div class="col-lg-6 col-md-6 col-12 order-2 order-md-2 mt-4">
+
+      <!-- <img src="assets/IMG/Mengenal-Sejarah-Internet-Fungsi-dan-perkembangannya-di-Dunia-dan-Indonesia1.jpg" 
+           class="img-fluid" 
+           alt="Hero Teknologi">
+    </div> -->
+
+  </div>
+</div>
+
+</section>
+
+
+ <!-- hero -->
+
 </body>
+<script src="dist/JS/script.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
