--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body >
  <!-- nav  -->
-<nav class="navbar navbar-expand-lg py-3 fixed-top navbar-dark " >
+<nav class="navbar navbar-expand-lg py-3 fixed-top navbar-dark" id="navbar" >
 
   <div class="container">
 
@@ -76,9 +76,196 @@
 </div>
 
 </section>
-
-
  <!-- hero -->
+
+</head>
+<body>
+
+  <!-- ===== HERO SECTION ===== -->
+
+  <!-- ===== PAKET SECTION ===== -->
+<section class="section-paket py-5" id="section-paket">
+  <div class="container">
+    <h2 class="text-white fw-bold mb-4 text-center">Layanan Kami</h2>
+
+    <div class="row g-4">
+
+      <!-- Paket 1 -->
+      <div class="col-lg-3 col-md-6">
+        <div class="card card-paket border-umroh">
+          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <div class="card-body ">
+            <h5 class="fw-bold pb-2">Pengembangan Website</h5>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
+            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
+            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">3.500.000</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Paket 2 -->
+      <div class="col-lg-3 col-md-6">
+        <div class="card card-paket border-umroh">
+          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <div class="card-body ">
+            <h5 class="fw-bold pb-2 ">Desain UI/UX Modern</h5>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Wireframe</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Prototyping</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>User Flow</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Design System</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Figma</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Interactive Mockup</p>
+            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
+            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">Rp 2.000.000</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Paket 3 -->
+      <div class="col-lg-3 col-md-6">
+        <div class="card card-paket border-umroh">
+          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <div class="card-body ">
+            <h5 class="fw-bold pb-2">Pengembangan Website</h5>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
+            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
+            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">3.500.000</a>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- Paket 4 -->
+      <div class="col-lg-3 col-md-6">
+        <div class="card card-paket border-umroh">
+          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <div class="card-body">
+            <h5 class="fw-bold pb-2">Pengembangan Website</h5>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
+            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
+            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">3.500.000</a>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+  <!-- ===== MODAL DETAIL ===== -->
+
+  
+<section id="about" class=" text-white ">
+  <div class="container">
+    <div class="row align-items-center">
+      
+      <!-- Foto About -->
+      <div class="col-lg-5 mb-4 mb-lg-0">
+        <img 
+          src="assets/IMG/ChatGPT Image Nov 20, 2025, 01_45_53 PM.png" 
+          alt="About Me" 
+          class="img-fluid rounded shadow" width="800px"
+        >
+      </div>
+
+      <!-- Teks About -->
+      <div class="col-lg-7">
+        <h2 class="fw-bold mb-3">About Me</h2>
+        <p class="mb-3 fs-4">
+          Kami adalah seorang profesional di bidang teknologi yang berfokus pada 
+          pengembangan website, solusi digital, dan layanan teknologi modern. 
+          Dengan pengalaman dalam desain, development, dan integrasi sistem, 
+          saya membantu bisnis untuk berkembang secara digital.
+        </p>
+
+        <p class="mb-4 fs-5">
+          Kami selalu mengutamakan kualitas, kecepatan, dan efisiensi dalam setiap proyek 
+          yang saya kerjakan. Kepuasan klien adalah prioritas utama kami.
+        </p>
+
+        <ul class="list-unstyled fs-5 " id="tentang">
+          <li class="mb-2">✔ Pengembangan Website Modern</li>
+          <li class="mb-2">✔ Desain UI/UX Profesional</li>
+          <li class="mb-2">✔ Solusi AI & Automasi Bisnis</li>
+          <li class="mb-2">✔ IT Support & Cyber Security</li>
+        </ul>
+
+        <a href="#contact" class="btn btn-primary px-4 mt-3">
+          Hubungi Saya
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+<section class="py-5 text-center" id="terpecaya" >
+  <div class="container" >
+
+    <!-- Judul -->
+    <h3 class="fw-bold mb-2 text-white">Telah teruji oleh</h3>
+    <p class="text-white mb-4">
+      Digunakan dan dipercaya oleh berbagai perusahaan.
+    </p>
+
+    <!-- Deretan Logo -->
+    <div class="row justify-content-center align-items-center g-4">
+
+      <!-- Logo 1 (contoh pakai file dari history) -->
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="assets/IMG/ChatGPT Image Nov 20, 2025, 03_09_53 PM.png" class="card-img-top" alt="Foto Paket">
+          <div class="card-body">
+            <h5 class="fw-bold pb-2">Innovate the Future</h5>
+            <p class="text-muted mb-2">NexoraTech berfokus pada solusi digital modern, mulai dari pengembangan aplikasi hingga sistem otomasi pintar yang membantu bisnis tumbuh lebih cepat dan lebih efisien.</p>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- Logo 2 -->
+      <div class="col-6 col-md-2">
+        <img 
+          src="https://placehold.co/200x80?text=Logo+2" 
+          class="img-fluid" 
+          alt="Logo Perusahaan 2">
+      </div>
+
+      <!-- Logo 3 -->
+      <div class="col-6 col-md-2">
+        <img 
+          src="https://placehold.co/200x80?text=Logo+3" 
+          class="img-fluid" 
+          alt="Logo Perusahaan 3">
+      </div>
+
+      <!-- Logo 4 -->
+      <div class="col-6 col-md-2">
+        <img 
+          src="https://placehold.co/200x80?text=Logo+4" 
+          class="img-fluid" 
+          alt="Logo Perusahaan 4">
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
 
 </body>
 <script src="dist/JS/script.js"></script> 
