--- a/index.html
+++ b/index.html
@@ -227,43 +227,46 @@
 
       <!-- Logo 1 (contoh pakai file dari history) -->
       <div class="col-lg-3 col-md-6">
-        <div class="card">
-          <img src="assets/IMG/ChatGPT Image Nov 20, 2025, 03_09_53 PM.png" class="card-img-top" alt="Foto Paket">
+        <div class="card ">
+          <img src="assets/IMG/Untitled design (2).png" class="card-img-top" alt="Foto Paket">
           <div class="card-body">
-            <h5 class="fw-bold pb-2">Innovate the Future</h5>
-            <p class="text-muted mb-2">NexoraTech berfokus pada solusi digital modern, mulai dari pengembangan aplikasi hingga sistem otomasi pintar yang membantu bisnis tumbuh lebih cepat dan lebih efisien.</p>
+            <p class="text-muted mb-2">Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka</p>
 
           </div>
         </div>
       </div>
 
       <!-- Logo 2 -->
-      <div class="col-6 col-md-2">
-        <img 
-          src="https://placehold.co/200x80?text=Logo+2" 
-          class="img-fluid" 
-          alt="Logo Perusahaan 2">
-      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="assets/IMG/Untitled design (1).png" class="card-img-top" alt="Foto Paket">
+          <div class="card-body">
+            <p class="text-muted mb-2">Pendekatan mereka terstruktur dan modern.Kami mendapatkan solusi cloud yang stabil dan scalable sesuai kebutuhan perusahaan.</p>
 
+          </div>
+        </div>
+      </div>
       <!-- Logo 3 -->
-      <div class="col-6 col-md-2">
-        <img 
-          src="https://placehold.co/200x80?text=Logo+3" 
-          class="img-fluid" 
-          alt="Logo Perusahaan 3">
+         <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="assets/IMG/asa.png" class="card-img-top" alt="Foto Paket">
+          <div class="card-body">
+            <p class="text-muted mb-2">Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka</p>
+
+          </div>
+        </div>
       </div>
 
       <!-- Logo 4 -->
-      <div class="col-6 col-md-2">
-        <img 
-          src="https://placehold.co/200x80?text=Logo+4" 
-          class="img-fluid" 
-          alt="Logo Perusahaan 4">
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="assets/IMG/intelatik.png" class="card-img-top" alt="Foto Paket">
+          <div class="card-body">
+            <p class="text-muted mb-2">Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka</p>
+
+          </div>
+        </div>
       </div>
-
-    </div>
-
-  </div>
 </section>
 
 
