--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <a class="nav-link active " href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#section-paket">Layanan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Service</a>
+          <a class="nav-link" href="#">tentang</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -61,7 +61,7 @@
     <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 " id="texthero">
       <h1 class="fw-bold mb-3" style="font-size: 48px">Membantu Bisnis Anda Melakukan Lompatan Digital dengan Keyakinan</h1>
       <p class="mb-4" style="font-size: 18px">Memberikan arah yang jelas bagi bisnis Anda melalui strategi digital yang dirancang dengan presisi dan didukung analisis yang mendalam.</p>
-      <a href="#" class="btn btn-primary px-4 py-2 fs-3">Mulai Sekarang</a>
+      <a href="#" class="btn-paket fs-3">Mulai Sekarang</a>
     </div>
 
     <!-- Kolom Gambar -->
@@ -84,7 +84,7 @@
   <!-- ===== HERO SECTION ===== -->
 
   <!-- ===== PAKET SECTION ===== -->
-<section class="section-paket py-5" id="section-paket">
+<section class="section-paket " id="section-paket">
   <div class="container">
     <h2 class="text-white fw-bold mb-4 text-center">Layanan Kami</h2>
 
@@ -92,54 +92,54 @@
 
       <!-- Paket 1 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card card-paket border-umroh">
+        <div class="card-paket ">
           <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
           <div class="card-body ">
-            <h5 class="fw-bold pb-2">Pengembangan Website</h5>
+            <h5 class="fw-bold py-3">Pengembangan Website</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
-            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
-            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">3.500.000</a>
+            <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
+            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">3.500.000</a>
           </div>
         </div>
       </div>
 
       <!-- Paket 2 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card card-paket border-umroh">
+        <div class="card-paket">
           <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
           <div class="card-body ">
-            <h5 class="fw-bold pb-2 ">Desain UI/UX Modern</h5>
+            <h5 class="fw-bold py-3 ">Desain UI/UX Modern</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Wireframe</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Prototyping</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>User Flow</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Design System</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Figma</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Interactive Mockup</p>
-            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
-            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">Rp 2.000.000</a>
+            <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
+            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">Rp 2.000.000</a>
           </div>
         </div>
       </div>
 
       <!-- Paket 3 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card card-paket border-umroh">
+        <div class="card-paket ">
           <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
           <div class="card-body ">
-            <h5 class="fw-bold pb-2">Pengembangan Website</h5>
+            <h5 class="fw-bold py-3">Pengembangan Website</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
-            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
-            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">3.500.000</a>
+            <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
+            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">3.500.000</a>
 
           </div>
         </div>
@@ -147,18 +147,18 @@
 
       <!-- Paket 4 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card card-paket border-umroh">
+        <div class="card-paket">
           <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
           <div class="card-body">
-            <h5 class="fw-bold pb-2">Pengembangan Website</h5>
+            <h5 class="fw-bold py-3">Pengembangan Website</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
-            <p class="mb-2 text-center fs-5 fw-bold">Harga</p>
-            <a href="#" class="btn btn-primary px-4 d-flex align-items-center justify-content-center">3.500.000</a>
+            <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
+            <a href="#" class="btn-paket d-flex align-items-center justify-content-center">3.500.000</a>
 
           </div>
         </div>
@@ -175,7 +175,7 @@
     <div class="row align-items-center">
       
       <!-- Foto About -->
-      <div class="col-lg-5 mb-4 mb-lg-0">
+      <div class="col-lg-5 mb-4 ">
         <img 
           src="assets/IMG/ChatGPT Image Nov 20, 2025, 01_45_53 PM.png" 
           alt="About Me" 
@@ -185,7 +185,7 @@
 
       <!-- Teks About -->
       <div class="col-lg-7">
-        <h2 class="fw-bold mb-3">About Me</h2>
+        <h2 class="fw-bold mb-3">Tentang Kami</h2>
         <p class="mb-3 fs-4">
           Kami adalah seorang profesional di bidang teknologi yang berfokus pada 
           pengembangan website, solusi digital, dan layanan teknologi modern. 
@@ -212,9 +212,8 @@
 
     </div>
   </div>
-</section>
-<section class="py-5 text-center" id="terpecaya" >
-  <div class="container" >
+<section class="py-5 text-center" id="terpecaya">
+  <div class="container">
 
     <!-- Judul -->
     <h3 class="fw-bold mb-2 text-white">Telah teruji oleh</h3>
@@ -225,48 +224,111 @@
     <!-- Deretan Logo -->
     <div class="row justify-content-center align-items-center g-4">
 
-      <!-- Logo 1 (contoh pakai file dari history) -->
+      <!-- Logo 1 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card ">
+        <div class="card card-hover">
           <img src="assets/IMG/Untitled design (2).png" class="card-img-top" alt="Foto Paket">
-          <div class="card-body">
-            <p class="text-muted mb-2">Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka</p>
-
+          <div class="card-paket">
+            <p class="text-muted mb-2 ">
+              Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka.
+            </p>
           </div>
         </div>
       </div>
 
       <!-- Logo 2 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card">
+        <div class="card card-hover">
           <img src="assets/IMG/Untitled design (1).png" class="card-img-top" alt="Foto Paket">
-          <div class="card-body">
-            <p class="text-muted mb-2">Pendekatan mereka terstruktur dan modern.Kami mendapatkan solusi cloud yang stabil dan scalable sesuai kebutuhan perusahaan.</p>
-
+          <div class="card-paket">
+            <p class="text-muted mb-2 ">
+              Tim ini menghadirkan solusi yang tepat dan unggul. Proses integrasi sistem kami menjadi jauh lebih lancar dan efisien sejak berkolaborasi dengan mereka.
+            </p>
           </div>
         </div>
       </div>
-      <!-- Logo 3 -->
-         <div class="col-lg-3 col-md-6">
-        <div class="card">
-          <img src="assets/IMG/asa.png" class="card-img-top" alt="Foto Paket">
-          <div class="card-body">
-            <p class="text-muted mb-2">Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka</p>
 
+      <!-- Logo 3 -->
+      <div class="col-lg-3 col-md-6">
+        <div class="card card-hover">
+          <img src="assets/IMG/asa.png" class="card-img-top" alt="Foto Paket">
+          <div class="card-paket">
+            <p class="text-muted mb-2">
+              Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka.
+            </p>
           </div>
         </div>
       </div>
 
       <!-- Logo 4 -->
       <div class="col-lg-3 col-md-6">
-        <div class="card">
+        <div class="card card-hover">
           <img src="assets/IMG/intelatik.png" class="card-img-top" alt="Foto Paket">
-          <div class="card-body">
-            <p class="text-muted mb-2">Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka</p>
-
+          <div class="card-paket">
+            <p class="text-muted mb-2">
+              Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka.
+            </p>
           </div>
         </div>
       </div>
+
+    </div> <!-- row -->
+  </div> <!-- container -->
+</section>
+
+
+<section style="background:#00050d; padding:60px 0;">
+    <div class="container">
+        <div class="row align-items-center">
+
+            <!-- GAMBAR -->
+            <div class="col-md-6 mb-4 mb-md-0 text-center">
+                <img src="your-image.jpg"
+                     class="img-fluid rounded"
+                     style="max-width: 90%;">
+            </div>
+
+            <!-- FORM -->
+            <div class="col-md-6 text-light">
+                <h2 class="mb-3">Hubungi Saya</h2>
+                <p class="text-secondary mb-4">
+                    Kirim pesan melalui form ini.
+                </p>
+
+                <form id="contactForm" class="p-4 rounded"
+                      style="background:#0a0f1a; border:1px solid #0e1625;">
+
+                    <!-- NAMA -->
+                    <div class="mb-3">
+                        <label class="form-label text-light">Nama Lengkap</label>
+                        <input type="text" id="nama" class="form-control"
+                               style="background:#0d1523; border:1px solid #1b2a41; color:white;">
+                        <small class="text-danger d-none" id="err-nama">Nama tidak boleh kosong</small>
+                    </div>
+
+                    <!-- EMAIL -->
+                    <div class="mb-3">
+                        <label class="form-label text-light">Email</label>
+                        <input type="text" id="email" class="form-control"
+                               style="background:#0d1523; border:1px solid #1b2a41; color:white;">
+                        <small class="text-danger d-none" id="err-email">Email tidak boleh kosong</small>
+                    </div>
+
+                    <!-- PESAN -->
+                    <div class="mb-3">
+                        <label class="form-label text-light">Pesan</label>
+                        <textarea id="pesan" class="form-control" rows="4"
+                                  style="background:#0d1523; border:1px solid #1b2a41; color:white;"></textarea>
+                        <small class="text-danger d-none" id="err-pesan">Pesan tidak boleh kosong</small>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary w-100">Kirim Pesan</button>
+
+                </form>
+            </div>
+
+        </div>
+    </div>
 </section>
 
 
