hero di benerin

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 </nav>
 <!-- nav -->
  <!-- hero -->
-<section class="py-5 d-flex align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.801)), url(../assets/IMG/hero.png); min-height: 100vh; width: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; color: white;">
+<section class="py-5 d-flex align-items-center hero" >
  <div class="container py-5" id="hero">
   <div class="row align-items-center ">
 
     <!-- Kolom Teks -->
-    <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 " id="texthero">
+    <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 texthero" id="">
       <h1 class="fw-bold mb-3" style="font-size: 48px">Membantu Bisnis Anda Melakukan Lompatan Digital dengan Keyakinan</h1>
       <p class="mb-4" style="font-size: 18px">Memberikan arah yang jelas bagi bisnis Anda melalui strategi digital yang dirancang dengan presisi dan didukung analisis yang mendalam.</p>
-      <a href="#" class="btn-paket fs-3">Mulai Sekarang</a>
+      <a href="#" class="btn-paket fs-2 fw-bold">Mulai Sekarang</a>
     </div>
 
     <!-- Kolom Gambar -->
@@ -205,7 +205,7 @@
           <li class="mb-2">✔ IT Support & Cyber Security</li>
         </ul>
 
-        <a href="#contact" class="btn btn-primary px-4 mt-3">
+        <a href="#Hubungi" class="btn btn-primary px-4 mt-3">
           Hubungi Saya
         </a>
       </div>
@@ -277,7 +277,7 @@
 </section>
 
 
-<section style="background:#00050d; padding:60px 0;">
+<section style="background:#00050d; padding:60px 0;" id="Hubungi">
     <div class="container">
         <div class="row align-items-center">
 
