--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- Paket 1 -->
       <div class="col-lg-3 col-md-6">
         <div class="card-paket ">
-          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <img src="assets/IMG/OIP_imresizer.jpg" class="card-img-top web" alt="Foto Paket">
           <div class="card-body ">
             <h5 class="fw-bold py-3">Pengembangan Website</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
@@ -111,7 +111,7 @@
       <!-- Paket 2 -->
       <div class="col-lg-3 col-md-6">
         <div class="card-paket">
-          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <img src="assets/IMG/IP_imresizer.jpg" class="card-img-top" alt="Foto Paket">
           <div class="card-body ">
             <h5 class="fw-bold py-3 ">Desain UI/UX Modern</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Wireframe</p>
@@ -129,17 +129,17 @@
       <!-- Paket 3 -->
       <div class="col-lg-3 col-md-6">
         <div class="card-paket ">
-          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <img src="assets/IMG/OIP__1__resizedBy(QuickResizer.com).jpeg" class="card-img-top" alt="Foto Paket">
           <div class="card-body ">
-            <h5 class="fw-bold py-3">Pengembangan Website</h5>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
+            <h5 class="fw-bold py-3">Keamanan Sistem & Data</h5>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Penetration Testing</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Security Audit</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Firewall Setup</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Malware Protection</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Data Encryption</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Network Security Monitoring</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">3.500.000</a>
+            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">1.800.000</a>
 
           </div>
         </div>
@@ -148,17 +148,17 @@
       <!-- Paket 4 -->
       <div class="col-lg-3 col-md-6">
         <div class="card-paket">
-          <img src="https://placehold.co/600x400" class="card-img-top" alt="Foto Paket">
+          <img src="assets/IMG/Poster_Artikel_43_resizedBy(QuickResizer.com).jpeg" class="card-img-top" alt="Foto Paket">
           <div class="card-body">
-            <h5 class="fw-bold py-3">Pengembangan Website</h5>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
+            <h5 class="fw-bold py-3">IT Support & Maintenance</h5>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Monitoring Sistem</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Troubleshooting</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Maintenance Rutin </p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Instalasi Software</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Backup Data</p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Update Sistem</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a href="#" class="btn-paket d-flex align-items-center justify-content-center">3.500.000</a>
+            <a href="#" class="btn-paket d-flex align-items-center justify-content-center">750.000 / bulan</a>
 
           </div>
         </div>
