--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </nav>
 <!-- nav -->
  <!-- hero -->
-<section class="py-5 d-flex align-items-center hero" >
+<section class="py-5 d-flex align-items-center hero" style="background-image: linear-gradient(rgba(0, 0, 0, 0.801)),url(assets/img/hero.png)" >
  <div class="container py-5" id="hero">
   <div class="row align-items-center ">
 
@@ -212,7 +212,7 @@
 
     </div>
   </div>
-<section class="py-5 text-center" id="terpecaya">
+<section class=" text-center" id="terpecaya">
   <div class="container">
 
     <!-- Judul -->
@@ -254,7 +254,7 @@
           <img src="assets/IMG/asa.png" class="card-img-top" alt="Foto Paket">
           <div class="card-paket">
             <p class="text-muted mb-2">
-              Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka.
+              Tim ini menyajikan solusi presisi dengan standar terbaik. Implementasi serta integrasi sistem kami kini jauh lebih optimal setelah bermitra dengan mereka.
             </p>
           </div>
         </div>
@@ -266,7 +266,7 @@
           <img src="assets/IMG/intelatik.png" class="card-img-top" alt="Foto Paket">
           <div class="card-paket">
             <p class="text-muted mb-2">
-              Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka.
+              Mereka menghadirkan solusi yang akurat dan dapat diandalkan. Kinerja integrasi sistem kami meningkat pesat dan berjalan lebih mulus sejak bekerja bersama tim ini.
             </p>
           </div>
         </div>
@@ -280,20 +280,20 @@
 <section style="background:#00050d; padding:60px 0;" id="Hubungi">
     <div class="container">
         <div class="row align-items-center">
-
+                <h2 class="mb-2">Hubungi Saya</h2>
+                <p class="text-secondary mb-2">
+                    Kirim pesan melalui form ini.
+                </p>
             <!-- GAMBAR -->
             <div class="col-md-6 mb-4 mb-md-0 text-center">
-                <img src="your-image.jpg"
+                <img src="assets/img/ChatGPT Image Nov 26, 2025, 03_00_31 PM.png"
                      class="img-fluid rounded"
-                     style="max-width: 90%;">
+                     style="max-width: 100%; height: 100%; ">
             </div>
 
             <!-- FORM -->
             <div class="col-md-6 text-light">
-                <h2 class="mb-3">Hubungi Saya</h2>
-                <p class="text-secondary mb-4">
-                    Kirim pesan melalui form ini.
-                </p>
+                
 
                 <form id="contactForm" class="p-4 rounded"
                       style="background:#0a0f1a; border:1px solid #0e1625;">
