--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </p>
             <!-- GAMBAR -->
             <div class="col-md-6 mb-4 mb-md-0 text-center">
-                <img src="assets/img/ChatGPT Image Nov 26, 2025, 03_00_31 PM.png"
+                <img src="assets/IMG/ChatGPT Image Nov 26, 2025, 03_00_31 PM.png"
                      class="img-fluid rounded"
                      style="max-width: 100%; height: 100%; ">
             </div>
