--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </nav>
 <!-- nav -->
  <!-- hero -->
-<section class="py-5 d-flex align-items-center hero" style="background-image: linear-gradient(rgba(0, 0, 0, 0.801)),url(../assets/IMG/hero.png)" >
+<section class="py-5 d-flex align-items-center hero"  >
  <div class="container py-5" id="hero">
   <div class="row align-items-center ">
 
