--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="shortcut icon" type="" href="assets/icon/ChatGPT Image Nov 19, 2025, 10_00_30 AM.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- SWIPER CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body >
  <!-- nav  -->
@@ -37,16 +44,25 @@
           <a class="nav-link" href="#section-paket">Layanan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">tentang</a>
+          <a class="nav-link" href="#about">tentang</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#terpecaya">Teruji</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#Hubungi">Hubungi</a>
         </li>
       </ul>
 
       <!-- KANAN: Ikon Sosial Media -->
+
       <div class="d-flex gap-3">
-        
+        <div class="d-flex gap-3">
+          <a href="#" class="text-light fs-4"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-light fs-4"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-light fs-4"><i class="fab fa-linkedin"></i></a>
+        </div>
+
       </div>
     </div>
   </div>
@@ -58,10 +74,10 @@
   <div class="row align-items-center ">
 
     <!-- Kolom Teks -->
-    <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 texthero" id="">
+    <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 texthero " id="">
       <h1 class="fw-bold mb-3" style="font-size: 48px">Membantu Bisnis Anda Melakukan Lompatan Digital dengan Keyakinan</h1>
       <p class="mb-4" style="font-size: 18px">Memberikan arah yang jelas bagi bisnis Anda melalui strategi digital yang dirancang dengan presisi dan didukung analisis yang mendalam.</p>
-      <a href="#" class="btn-paket fs-2 fw-bold">Mulai Sekarang</a>
+      <a href="#" class="btn-paket fs-5 fw-bold ">Mulai Sekarang</a>
     </div>
 
     <!-- Kolom Gambar -->
@@ -84,36 +100,46 @@
   <!-- ===== HERO SECTION ===== -->
 
   <!-- ===== PAKET SECTION ===== -->
-<section class="section-paket " id="section-paket">
+<section class="section-paket" id="section-paket">
   <div class="container">
+
     <h2 class="text-white fw-bold mb-4 text-center">Layanan Kami</h2>
+
+    <!-- BUTTON FILTER -->
+    <div class="d-flex flex-wrap justify-content-center gap-2 mb-4">
+      <button class="btn btn-light filter-btn me-2 active" data-filter="all">Semua</button>
+      <button class="btn btn-light filter-btn me-2" data-filter="website">Website</button>
+      <button class="btn btn-light filter-btn me-2" data-filter="uiux">UI/UX</button>
+      <button class="btn btn-light filter-btn me-2" data-filter="security">Keamanan</button>
+      <button class="btn btn-light filter-btn" data-filter="support">IT Support</button>
+    </div>
 
     <div class="row g-4">
 
       <!-- Paket 1 -->
-      <div class="col-lg-3 col-md-6">
-        <div class="card-paket ">
+      <div class="col-lg-3 col-md-6 paket-card" data-category="website" data-aos="zoom-in-up">
+        <div class="card-paket">
           <img src="assets/IMG/OIP_imresizer.jpg" class="card-img-top web" alt="Foto Paket">
-          <div class="card-body ">
-            <h5 class="fw-bold py-3">Pengembangan Website</h5>
+          <div class="card-body">
+            <h5 class="fw-bold py-3">Website</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>HTML</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>CSS</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript </p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>JavaScript</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Tailwind CSS</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">3.500.000</a>
+            <a class="btn-paket d-flex align-items-center justify-content-center">3.500.000</a>
           </div>
         </div>
       </div>
 
       <!-- Paket 2 -->
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6 paket-card" data-category="uiux" data-aos="zoom-in-up">
         <div class="card-paket">
-          <img src="assets/IMG/IP_imresizer.jpg" class="card-img-top" alt="Foto Paket">
-          <div class="card-body ">
-            <h5 class="fw-bold py-3 ">Desain UI/UX Modern</h5>
+          <img src="assets/IMG/modern-flat-design-isometric-concept-ux-ui-design_9209-1597_resizedBy(QuickResizer.com).jpeg" class="card-img-top web" alt="Foto Paket">
+          <div class="card-body">
+            <h5 class="fw-bold py-3">UI/UX Desain</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Wireframe</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Prototyping</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>User Flow</p>
@@ -121,16 +147,16 @@
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Figma</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Interactive Mockup</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">Rp 2.000.000</a>
+            <a class="btn-paket d-flex align-items-center justify-content-center">2.000.000</a>
           </div>
         </div>
       </div>
 
       <!-- Paket 3 -->
-      <div class="col-lg-3 col-md-6">
-        <div class="card-paket ">
-          <img src="assets/IMG/OIP__1__resizedBy(QuickResizer.com).jpeg" class="card-img-top" alt="Foto Paket">
-          <div class="card-body ">
+      <div class="col-lg-3 col-md-6 paket-card" data-category="security" data-aos="zoom-in-up">
+        <div class="card-paket">
+          <img src="assets/IMG/OIP__1__resizedBy(QuickResizer.com).jpeg" class="card-img-top web" alt="Foto Paket">
+          <div class="card-body">
             <h5 class="fw-bold py-3">Keamanan Sistem & Data</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Penetration Testing</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Security Audit</p>
@@ -139,38 +165,39 @@
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Data Encryption</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Network Security Monitoring</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a href="#" class="btn-paket  d-flex align-items-center justify-content-center">1.800.000</a>
-
+            <a class="btn-paket d-flex align-items-center justify-content-center">1.800.000</a>
           </div>
         </div>
       </div>
 
       <!-- Paket 4 -->
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6 paket-card" data-category="support" data-aos="zoom-in-up">
         <div class="card-paket">
-          <img src="assets/IMG/Poster_Artikel_43_resizedBy(QuickResizer.com).jpeg" class="card-img-top" alt="Foto Paket">
+          <img src="assets/IMG/freepik__adjust__37334.png" class="card-img-top web" alt="Foto Paket">
           <div class="card-body">
             <h5 class="fw-bold py-3">IT Support & Maintenance</h5>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Monitoring Sistem</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Troubleshooting</p>
-            <p class="text-muted mb-2"><i class="bi bi-check"></i>Maintenance Rutin </p>
+            <p class="text-muted mb-2"><i class="bi bi-check"></i>Maintenance Rutin</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Instalasi Software</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Backup Data</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Update Sistem</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a href="#" class="btn-paket d-flex align-items-center justify-content-center">750.000 / bulan</a>
-
+            <a class="btn-paket d-flex align-items-center justify-content-center">750.000 / bulan</a>
           </div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 paket-card" data-category="uiux" data-aos="zoom-in-up">
+ 
 
     </div>
   </div>
 </section>
+
   <!-- ===== MODAL DETAIL ===== -->
 
   
-<section id="about" class=" text-white ">
+<section id="about" class=" text-white " id="about">
   <div class="container">
     <div class="row align-items-center">
       
@@ -185,102 +212,104 @@
 
       <!-- Teks About -->
       <div class="col-lg-7">
-        <h2 class="fw-bold mb-3">Tentang Kami</h2>
+        <h2 class="fw-bold mb-3" style="font-size: 40px;">Tentang Kami</h2>
         <p class="mb-3 fs-4">
-          Kami adalah seorang profesional di bidang teknologi yang berfokus pada 
-          pengembangan website, solusi digital, dan layanan teknologi modern. 
-          Dengan pengalaman dalam desain, development, dan integrasi sistem, 
-          saya membantu bisnis untuk berkembang secara digital.
+          Kami adalah tim profesional di bidang teknologi yang berfokus pada pengembangan website, solusi digital, dan layanan teknologi modern. Dengan pengalaman dalam desain, development, dan integrasi sistem, kami membantu berbagai bisnis untuk berkembang secara digital.
         </p>
 
-        <p class="mb-4 fs-5">
-          Kami selalu mengutamakan kualitas, kecepatan, dan efisiensi dalam setiap proyek 
-          yang saya kerjakan. Kepuasan klien adalah prioritas utama kami.
+        <p class="mb-4 fs-4">
+          Kami selalu mengutamakan kualitas, kecepatan, dan efisiensi dalam setiap proyek yang kami kerjakan. Kepuasan klien adalah prioritas utama bagi kami.
         </p>
 
-        <ul class="list-unstyled fs-5 " id="tentang">
+        <ul class="list-unstyled fs-4 mb-4 " id="tentang">
           <li class="mb-2">✔ Pengembangan Website Modern</li>
-          <li class="mb-2">✔ Desain UI/UX Profesional</li>
-          <li class="mb-2">✔ Solusi AI & Automasi Bisnis</li>
-          <li class="mb-2">✔ IT Support & Cyber Security</li>
+          <li class="mb-2">✔ UI/UX Desain</li>
+          <li class="mb-2">✔ Keamanan Sistem & Data</li>
+          <li class="mb-2">✔ IT Support &  Maintenance</li>
         </ul>
 
-        <a href="#Hubungi" class="btn btn-primary px-4 mt-3">
-          Hubungi Saya
+        <a href="#Hubungi" class=" btn-paket px-4  " style="font-size: 28px;">
+          Hubungi Kami
         </a>
       </div>
 
     </div>
   </div>
-<section class=" text-center" id="terpecaya">
+<section class="text-center" id="terpecaya">
   <div class="container">
 
-    <!-- Judul -->
-    <h3 class="fw-bold mb-2 text-white">Telah teruji oleh</h3>
-    <p class="text-white mb-4">
+    <h3 class="fw-bold mb-2 text-white" style="font-size: 40px;">Telah teruji oleh</h3>
+    <p class="text-white mb-4" style="font-size: 18px;">
       Digunakan dan dipercaya oleh berbagai perusahaan.
     </p>
 
-    <!-- Deretan Logo -->
-    <div class="row justify-content-center align-items-center g-4">
+    <!-- SWIPER -->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
 
-      <!-- Logo 1 -->
-      <div class="col-lg-3 col-md-6">
-        <div class="card card-hover">
-          <img src="assets/IMG/Untitled design (2).png" class="card-img-top" alt="Foto Paket">
-          <div class="card-paket">
-            <p class="text-muted mb-2 ">
-              Tim ini memberikan solusi yang presisi dan berkualitas. Integrasi sistem kami berjalan jauh lebih efisien sejak bekerja sama dengan mereka.
-            </p>
+        <!-- Slide 1 -->
+        <div class="swiper-slide">
+          <div class="card card-hover">
+            <img src="assets/IMG/Untitled design (2).png" class="card-img-top" alt="Foto Paket">
+            <div class="card-paket">
+              <p class="text-muted mb-2">
+                Solusi yang mereka sediakan sangat tepat dan efektif. Sistem kami menjadi lebih terintegrasi, cepat, dan terstruktur sejak menjalin kerja sama dengan tim ini.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Logo 2 -->
-      <div class="col-lg-3 col-md-6">
-        <div class="card card-hover">
-          <img src="assets/IMG/Untitled design (1).png" class="card-img-top" alt="Foto Paket">
-          <div class="card-paket">
-            <p class="text-muted mb-2 ">
-              Tim ini menghadirkan solusi yang tepat dan unggul. Proses integrasi sistem kami menjadi jauh lebih lancar dan efisien sejak berkolaborasi dengan mereka.
-            </p>
+        <!-- Slide 2 -->
+        <div class="swiper-slide">
+          <div class="card card-hover">
+            <img src="assets/IMG/Untitled design (1).png" class="card-img-top" alt="Foto Paket">
+            <div class="card-paket">
+              <p class="text-muted mb-2 text-center">
+                Tim ini menghadirkan solusi yang tepat dan unggul. Proses integrasi sistem kami menjadi jauh lebih lancar dan efisien sejak berkolaborasi dengan mereka.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Logo 3 -->
-      <div class="col-lg-3 col-md-6">
-        <div class="card card-hover">
-          <img src="assets/IMG/asa.png" class="card-img-top" alt="Foto Paket">
-          <div class="card-paket">
-            <p class="text-muted mb-2">
-              Tim ini menyajikan solusi presisi dengan standar terbaik. Implementasi serta integrasi sistem kami kini jauh lebih optimal setelah bermitra dengan mereka.
-            </p>
+        <!-- Slide 3 -->
+        <div class="swiper-slide">
+          <div class="card card-hover">
+            <img src="assets/IMG/asa.png" class="card-img-top" alt="Foto Paket">
+            <div class="card-paket">
+              <p class="text-muted mb-2 ">
+                Tim ini menyajikan solusi presisi dengan standar terbaik. Implementasi serta integrasi sistem kami kini jauh lebih optimal setelah bermitra dengan mereka.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Logo 4 -->
-      <div class="col-lg-3 col-md-6">
-        <div class="card card-hover">
-          <img src="assets/IMG/intelatik.png" class="card-img-top" alt="Foto Paket">
-          <div class="card-paket">
-            <p class="text-muted mb-2">
-              Mereka menghadirkan solusi yang akurat dan dapat diandalkan. Kinerja integrasi sistem kami meningkat pesat dan berjalan lebih mulus sejak bekerja bersama tim ini.
-            </p>
+        <!-- Slide 4 -->
+        <div class="swiper-slide">
+          <div class="card card-hover">
+            <img src="assets/IMG/intelatik.png" class="card-img-top" alt="Foto Paket">
+            <div class="card-paket">
+              <p class="text-muted mb-2 text-center">
+                Mereka menghadirkan solusi yang akurat dan dapat diandalkan. Kinerja integrasi sistem kami meningkat pesat dan berjalan lebih mulus sejak bekerja bersama tim ini.
+              </p>
+            </div>
           </div>
         </div>
+
       </div>
 
-    </div> <!-- row -->
-  </div> <!-- container -->
+      <!-- PAGINATION -->
+      <div class="swiper-pagination"></div>
+    </div>
+
+  </div>
 </section>
 
 
+
 <section style="background:#00050d; padding:60px 0;" id="Hubungi">
-    <div class="container">
+    <div class="container hub">
         <div class="row align-items-center">
-                <h2 class="mb-2">Hubungi Saya</h2>
+                <h2 class="mb-2">Konsultasi Sekarang Secara Gratis</h2>
                 <p class="text-secondary mb-2">
                     Kirim pesan melalui form ini.
                 </p>
@@ -330,9 +359,84 @@
         </div>
     </div>
 </section>
+<footer class="bg-footer text-light pt-5 pb-3">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-3 mb-4">
+        <h5 class="fw-bold">VisiDigital</h5>
+        <p class="small">Solusi teknologi modern untuk kebutuhan digital Anda.</p>
+      </div>
+
+      <div class="col-md-3 mb-4">
+        <h5 class="fw-bold">Layanan</h5>
+        <ul class="list-unstyled small">
+          <li><a href="#" class="footer-link">Web Development</a></li>
+          <li><a href="#" class="footer-link">UI/UX Desain</a></li>
+          <li><a href="#" class="footer-link">Keamanan Sistem & Data</a></li>
+          <li><a href="#" class="footer-link">IT Support & Maintenance</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-3 mb-4">
+        <h5 class="fw-bold">Perusahaan</h5>
+        <ul class="list-unstyled small">
+          <li><a href="#" class="footer-link">Tentang Kami</a></li>
+          <li><a href="#" class="footer-link">Karir</a></li>
+          <li><a href="#" class="footer-link">Portfolio</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-3 mb-4">
+        <h5 class="fw-bold">Kontak</h5>
+        <ul class="list-unstyled small">
+          <li>Email: info@visidigital.com</li>
+          <li>Whatsapp: 08xxxxxx</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="text-center pt-3 mt-3 border-top border-secondary">
+      <p class="small mb-0">© 2025 VisiDigital. All Rights Reserved.</p>
+    </div>
+  </div>
+</footer>
 
 
 </body>
 <script src="dist/JS/script.js"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<!-- SWIPER JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 800,
+    once: true
+  });
+</script>
+<script>
+  var swiper = new Swiper(".mySwiper", {
+    slidesPerView: 1,
+    spaceBetween: 20,
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
+    },
+    breakpoints: {
+      576: {
+        slidesPerView: 2
+      },
+      768: {
+        slidesPerView: 3
+      },
+      992: {
+        slidesPerView: 4
+      }
+    }
+  });
+</script>
+
 </html>
