--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body >
+  <div id="preloader-dots">
+  <div class="dot"></div>
+  <div class="dot"></div>
+  <div class="dot"></div>
+</div>
+
  <!-- nav  -->
 <nav class="navbar navbar-expand-lg py-3 fixed-top navbar-dark" id="navbar" >
 
@@ -62,6 +68,8 @@
           <a href="#" class="text-light fs-4"><i class="fab fa-instagram"></i></a>
           <a href="#" class="text-light fs-4"><i class="fab fa-linkedin"></i></a>
         </div>
+        <!-- Toggle Dark/Light Mode -->
+
 
       </div>
     </div>
@@ -94,13 +102,14 @@
 </section>
  <!-- hero -->
 
-</head>
-<body>
+
+
 
   <!-- ===== HERO SECTION ===== -->
 
   <!-- ===== PAKET SECTION ===== -->
 <section class="section-paket" id="section-paket">
+ 
   <div class="container">
 
     <h2 class="text-white fw-bold mb-4 text-center">Layanan Kami</h2>
@@ -235,6 +244,10 @@
 
     </div>
   </div>
+</section>
+
+
+
 <section class="text-center" id="terpecaya">
   <div class="container">
 
@@ -309,7 +322,7 @@
 <section style="background:#00050d; padding:60px 0;" id="Hubungi">
     <div class="container hub">
         <div class="row align-items-center">
-                <h2 class="mb-2">Konsultasi Sekarang Secara Gratis</h2>
+                <h2 class="mb-2 text-white">Konsultasi Sekarang Secara Gratis</h2>
                 <p class="text-secondary mb-2">
                     Kirim pesan melalui form ini.
                 </p>
