--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 texthero " id="">
       <h1 class="fw-bold mb-3" style="font-size: 48px">Membantu Bisnis Anda Melakukan Lompatan Digital dengan Keyakinan</h1>
       <p class="mb-4" style="font-size: 18px">Memberikan arah yang jelas bagi bisnis Anda melalui strategi digital yang dirancang dengan presisi dan didukung analisis yang mendalam.</p>
-      <a href="#" class="btn-paket fs-5 fw-bold ">Mulai Sekarang</a>
+      <a href="#Hubungi" class="btn-paket fs-5 fw-bold ">Konsultasi sekarang</a>
     </div>
 
     <!-- Kolom Gambar -->
@@ -222,15 +222,15 @@
       <!-- Teks About -->
       <div class="col-lg-7">
         <h2 class="fw-bold mb-3" style="font-size: 40px;">Tentang Kami</h2>
-        <p class="mb-3 fs-4">
+        <p class="mb-3" style="font-size: 22px;">
           Kami adalah tim profesional di bidang teknologi yang berfokus pada pengembangan website, solusi digital, dan layanan teknologi modern. Dengan pengalaman dalam desain, development, dan integrasi sistem, kami membantu berbagai bisnis untuk berkembang secara digital.
         </p>
 
-        <p class="mb-4 fs-4">
+        <p class="mb-4 " style="font-size: 22px;">
           Kami selalu mengutamakan kualitas, kecepatan, dan efisiensi dalam setiap proyek yang kami kerjakan. Kepuasan klien adalah prioritas utama bagi kami.
         </p>
 
-        <ul class="list-unstyled fs-4 mb-4 " id="tentang">
+        <ul class="list-unstyled mb-4 " style="font-size: 22px;" id="tentang">
           <li class="mb-2">✔ Pengembangan Website Modern</li>
           <li class="mb-2">✔ UI/UX Desain</li>
           <li class="mb-2">✔ Keamanan Sistem & Data</li>
@@ -344,7 +344,7 @@
                     <div class="mb-3">
                         <label class="form-label text-light">Nama Lengkap</label>
                         <input type="text" id="nama" class="form-control"
-                               style="background:#0d1523; border:1px solid #1b2a41; color:white;">
+                               style="background:#0d1523; border:1px solid #36527e; color:white;">
                         <small class="text-danger d-none" id="err-nama">Nama tidak boleh kosong</small>
                     </div>
 
@@ -352,7 +352,7 @@
                     <div class="mb-3">
                         <label class="form-label text-light">Email</label>
                         <input type="text" id="email" class="form-control"
-                               style="background:#0d1523; border:1px solid #1b2a41; color:white;">
+                               style="background:#0d1523; border:1px solid #36527e; color:white;">
                         <small class="text-danger d-none" id="err-email">Email tidak boleh kosong</small>
                     </div>
 
@@ -360,7 +360,7 @@
                     <div class="mb-3">
                         <label class="form-label text-light">Pesan</label>
                         <textarea id="pesan" class="form-control" rows="4"
-                                  style="background:#0d1523; border:1px solid #1b2a41; color:white;"></textarea>
+                                  style="background:#0d1523; border:1px solid #36527e; color:white;"></textarea>
                         <small class="text-danger d-none" id="err-pesan">Pesan tidak boleh kosong</small>
                     </div>
 
@@ -384,19 +384,19 @@
       <div class="col-md-3 mb-4">
         <h5 class="fw-bold">Layanan</h5>
         <ul class="list-unstyled small">
-          <li><a href="#" class="footer-link">Web Development</a></li>
-          <li><a href="#" class="footer-link">UI/UX Desain</a></li>
-          <li><a href="#" class="footer-link">Keamanan Sistem & Data</a></li>
-          <li><a href="#" class="footer-link">IT Support & Maintenance</a></li>
+          <li><a href="#section-paket" class="footer-link">Web Development</a></li>
+          <li><a href="#section-paket" class="footer-link">UI/UX Desain</a></li>
+          <li><a href="#section-paket" class="footer-link">Keamanan Sistem & Data</a></li>
+          <li><a href="#section-paket" class="footer-link">IT Support & Maintenance</a></li>
         </ul>
       </div>
 
       <div class="col-md-3 mb-4">
         <h5 class="fw-bold">Perusahaan</h5>
         <ul class="list-unstyled small">
-          <li><a href="#" class="footer-link">Tentang Kami</a></li>
-          <li><a href="#" class="footer-link">Karir</a></li>
-          <li><a href="#" class="footer-link">Portfolio</a></li>
+          <li><a href="#about" class="footer-link">Tentang Kami</a></li>
+          <li><a href="#" class="footer-link"></a></li>
+          <li><a href="#terpecaya" class="footer-link">Terpercaya</a></li>
         </ul>
       </div>
 
