--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- TENGAH: Menu -->
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0 ">
         <li class="nav-item">
-          <a class="nav-link active " href="#">Home</a>
+          <a class="nav-link active " href="#hero">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#section-paket">Layanan</a>
@@ -77,8 +77,8 @@
 </nav>
 <!-- nav -->
  <!-- hero -->
-<section class="py-5 d-flex align-items-center hero"  >
- <div class="container py-5" id="hero">
+<section class="py-5 d-flex align-items-center hero" id="hero" >
+ <div class="container py-5" >
   <div class="row align-items-center ">
 
     <!-- Kolom Teks -->
