--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Bootstrap</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>MySQL</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a class="btn-paket d-flex align-items-center justify-content-center">3.500.000</a>
+            <a class="btn-paket d-flex align-items-center justify-content-center">Rp 3.500.000</a>
           </div>
         </div>
       </div>
@@ -156,7 +156,7 @@
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Figma</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Interactive Mockup</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a class="btn-paket d-flex align-items-center justify-content-center">2.000.000</a>
+            <a class="btn-paket d-flex align-items-center justify-content-center">Rp 2.000.000</a>
           </div>
         </div>
       </div>
@@ -174,7 +174,7 @@
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Data Encryption</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Network Security Monitoring</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a class="btn-paket d-flex align-items-center justify-content-center">1.800.000</a>
+            <a class="btn-paket d-flex align-items-center justify-content-center">Rp 1.800.000</a>
           </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Backup Data</p>
             <p class="text-muted mb-2"><i class="bi bi-check"></i>Update Sistem</p>
             <p class="mb-2 text-center fs-5 fw-bold pt-2">Harga</p>
-            <a class="btn-paket d-flex align-items-center justify-content-center">750.000 / bulan</a>
+            <a class="btn-paket d-flex align-items-center justify-content-center">Rp 750.000 / bulan</a>
           </div>
         </div>
       </div>
