--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link" href="#section-paket">Layanan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">tentang</a>
+          <a class="nav-link" href="#about">Tentang</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="#terpecaya">Teruji</a>
@@ -85,7 +85,7 @@
     <div class="col-lg-6 col-md-6 col-12 order-1 order-md-1 texthero " id="">
       <h1 class="fw-bold mb-3" style="font-size: 40px">Membantu Bisnis Anda Melakukan Lompatan Digital dengan Keyakinan</h1>
       <p class="mb-4" style="font-size: 18px">Memberikan arah yang jelas bagi bisnis Anda melalui strategi digital yang dirancang dengan presisi dan didukung analisis yang mendalam.</p>
-      <a href="#Hubungi" class="btn-paket fs-5 fw-bold ">Konsultasi sekarang</a>
+      <a href="#Hubungi" class="btn-paket  fw-bold " style="font-size: 20px;">Konsultasi sekarang</a>
     </div>
 
     <!-- Kolom Gambar -->
@@ -222,22 +222,22 @@
       <!-- Teks About -->
       <div class="col-lg-7">
         <h2 class="fw-bold mb-3" style="font-size: 40px;">Tentang Kami</h2>
-        <p class="mb-3" style="font-size: 22px;">
+        <p class="mb-3" style="font-size: 18px;">
           Kami adalah tim profesional di bidang teknologi yang berfokus pada pengembangan website, solusi digital, dan layanan teknologi modern. Dengan pengalaman dalam desain, development, dan integrasi sistem, kami membantu berbagai bisnis untuk berkembang secara digital.
         </p>
 
-        <p class="mb-4 " style="font-size: 22px;">
+        <p class="mb-4 " style="font-size: 18px;">
           Kami selalu mengutamakan kualitas, kecepatan, dan efisiensi dalam setiap proyek yang kami kerjakan. Kepuasan klien adalah prioritas utama bagi kami.
         </p>
 
-        <ul class="list-unstyled mb-4 " style="font-size: 22px;" id="tentang">
+        <ul class="list-unstyled mb-4 " style="font-size: 18x;" id="tentang">
           <li class="mb-2">✔ Pengembangan Website Modern</li>
           <li class="mb-2">✔ UI/UX Desain</li>
           <li class="mb-2">✔ Keamanan Sistem & Data</li>
           <li class="mb-2">✔ IT Support &  Maintenance</li>
         </ul>
 
-        <a href="#Hubungi" class=" btn-paket px-3  " style="font-size: 28px;">
+        <a href="#Hubungi" class=" btn-paket px-3  " style="font-size: 18px; font-weight: bold;">
           Hubungi Kami
         </a>
       </div>
